# Superdevs-Fellow

./: .gitignore  Cargo.toml  README.md  simple_test.sh  test_all_endpoints.sh
src/: main.rs  models.rs  routes.rs  utils.rs
src/handlers/: keypair.rs  message.rs  mod.rs  send.rs  token.rs
