[package]
name = "solana_fellowship_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
bs58 = "0.5"
ed25519-dalek = "1.0"
solana-sdk = "1.17"
solana-program = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.2"
hyper-rustls = "0.24"
axum-server = "0.5"
anyhow = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 